src/app/pages/movie/movie.component.scss
#movie {
    position: relative;
}
.movie__backdrop {
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    -ms-filter: blur(5px);
    filter: blur(5px);
}
#movie__header {
    color: #ffffff;
    position: relative;
}
.movie__info {
    padding: 5%;
}
.label {
    color: #fcb208;
}

.genre {
    display: inline-block;
    background: #ffffff;
    color: #000000;
    padding: 5px;
    border-radius: 5px;
    margin: 0 5px 5px 0;
    font-size: 11px;
}

.movie__imagesModal {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.8);
    transition: all 0.3 ease;
    transform: scale(0);
    z-index: 12;
}
.movie__imagesModal.open {
    transform: scale(1);
}
.movie__currentImage {
    margin: auto;
}

